[package]
name = "learn_rust"
version = "0.1.1"
edition = "2021"

#[dependencies]
#bigdecimal = { version="*", features = ["serde"] }

[dev-dependencies]
# async runtime relative creates
actix = "*"
actix-web = "*"
futures = { version= "0.3", features = ["thread-pool"] }
pin-project = "1.0"
tokio-uring = "0.1.0"
tokio = "1.0"

isahc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "*"
serde_json = "1.0"
toml = "*"
chrono = "*"
rust_decimal = "*"
bigdecimal = { version="*", features = ["serde"] }
num-bigint = "*"
itertools = "*"
flate2 = "*" # gzip
rand = "*"
