[package]
name = "learn_rust"
version = "0.1.1"
edition = "2021"

#[dependencies]
#bigdecimal = { version="*", features = ["serde"] }

[dev-dependencies]
# async runtime relative creates
actix = "*"
actix-web = "*"
futures = { version= "0.3", features = ["thread-pool"] }
tokio-uring = "0.1.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
reqwest = "*"

pin-project = "1.0"

isahc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "*"
serde_json = "1.0"
toml = "*"
chrono = "*"
rust_decimal = "*"
bigdecimal = { version="*", features = ["serde"] }
num-bigint = "*"
itertools = "*"
flate2 = "*" # gzip
rand = "*"

eyre = "0.6"
color-eyre = "*"
anyhow = "1.0"
# anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "*"
tracing-subscriber = "*"
libc = "0.2"
