[package]
name = "learn_rust"
version = "0.1.1"
edition = "2021"

#[dependencies]
#bigdecimal = { version="*", features = ["serde"] }

[dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
reqwest = "*"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# async runtime relative creates
actix = "*"
actix-web = "*"
futures = { version= "0.3", features = ["thread-pool"] }
tokio-uring = "0.1.0"

pin-project = "1.0"

isahc = "*"
serde_repr = "*"
serde_json = "1.0"
toml = "*"
chrono = "*"
rust_decimal = "*"
bigdecimal = { version="*", features = ["serde"] }
num-bigint = "*"
itertools = "*"
flate2 = "*" # gzip
rand = "*"

eyre = "0.6"
color-eyre = "*"
anyhow = "1.0"
# anyhow = { version = "1.0", features = ["backtrace"] }
libc = "0.2"

async-bincode = "*"
